<resources>
    <string name="app_name">Distance-And-Area-Meter</string>
    <string name="title_activity_maps">Map</string>
    <string name="start">Start Tracking</string>
    <string name="end">End</string>
    <string name="area">Area</string>
    <string name="distance">Distance</string>
    <string name="clear">Clear</string>
    <string name="title_activity_select_path">Map</string>
    <string name="track_path">Track Path</string>
    <string name="select_position">Select</string>
    <string name="select_positions">Select Positions</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
